K8s/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      #nodePort: 30030
  #type: NodePort
  #type: LoadBalancer
  type: ClusterIP
